[gd_scene load_steps=5 format=3 uid="uid://22cha2x1awlc"]

[ext_resource type="Script" uid="uid://dv2tea4ha3wjs" path="res://scenes/items/ground item/GroundCollectible.gd" id="1_2nqju"]
[ext_resource type="Script" uid="uid://by2rvbeoqg700" path="res://scenes/modules/general/movement component/MovementComponent.gd" id="2_1hpfc"]
[ext_resource type="Script" uid="uid://bvs746kb650us" path="res://scenes/modules/general/movement component/TrackingComponent.gd" id="3_6riq7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ce1ll"]
radius = 5.0

[node name="GroundCollectible" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 0
motion_mode = 1
script = ExtResource("1_2nqju")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ce1ll")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ce1ll")

[node name="MovementComponent" type="Node2D" parent="."]
script = ExtResource("2_1hpfc")
speed = 0

[node name="TrackingComponent" type="Node2D" parent="."]
script = ExtResource("3_6riq7")
target = 1
change_every_process = true

[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="velocity_changed" from="MovementComponent" to="." method="_on_velocity_changed"]
[connection signal="direction_changed" from="TrackingComponent" to="MovementComponent" method="set_direction"]
